--- a/libreria/templates/base.html
+++ b/libreria/templates/base.html
@@ -20,9 +20,9 @@
     </head>
 
     <body>
-        <nav class="nav justify-content-center  ">
+        <nav class="navbar navbar-expand navbar-light bg-light">
             <div class="nav navbar-nav">
-                <a class="nav-link active" href="#" aria-current="page">Inicio</a>
+                <a class="nav-item nav-link active" href="#" >Inicio</a>
                 <a class="nav-item nav-link" href="#">Libros</a>
             </div>
         </nav>
