--- a/libreria/templates/libros/form.html
+++ b/libreria/templates/libros/form.html
@@ -1,9 +1,17 @@
-{% extends "base.html" %}
 
-{% block titulo %} Agregar Nuevo libro {% endblock %}
 
-{% block contenido %}  
-
-    formulario base
-
-{% endblock %}
+<form enctype="multipart/form-data" method="post">
+    <div class="mb-3">
+        <label for="" class="form-label">Nombre</label>
+        <input
+            type="text"
+            class="form-control"
+            name=""
+            id=""
+            aria-describedby="helpId"
+            placeholder=""
+        />
+        
+    </div>
+    
+</form>
