--- a/libreria/templates/libros/index.html
+++ b/libreria/templates/libros/index.html
@@ -5,7 +5,17 @@
 {% block contenido %}
 
 <div class="card">
-    <div class="card-header">Listar libros</div>
+    <div class="card-header">
+        <a
+            name=""
+            id=""
+            class="btn btn-success"
+            href="{% url 'crear' %}"
+            role="button"
+            >
+            Agregar nuevo libro
+        </a>
+    </div>
     <div class="card-body">
         <h4 class="card-title">Libros</h4>
         <div class="table-responsive">
