modificaion en los html del folder libros

--- a/libreria/templates/libros/editar.html
+++ b/libreria/templates/libros/editar.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block titulo %} editar Nuevo libro {% endblock %}
+{% block titulo %} Editar libro {% endblock %}
 
 {% block contenido %}  
 
