--- a/libreria/templates/libros/index.html
+++ b/libreria/templates/libros/index.html
@@ -34,7 +34,10 @@
                         <td>django con python</td>
                         <td>imagen.jpg</td>
                         <td>libro de programacion</td>
-                        <td>editar | Borrar</td>
+                        <td>
+                            <a name="" id="" class="btn btn-info" href="#" role="button"> Editar </a>
+                            <a name="" id="" class="btn btn-danger" href="#" role="button"> Borrar </a>
+                        </td>
                     </tr>
                     
                 </tbody>
