--- a/libreria/templates/libros/index.html
+++ b/libreria/templates/libros/index.html
@@ -29,16 +29,20 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="">
-                        <td scope="row">0</td>
-                        <td>django con python</td>
-                        <td>imagen.jpg</td>
-                        <td>libro de programacion</td>
+                    {% for libro in libros %}
+                    <tr>
+                        <td>{{ libro.id }}</td>
+                        <td>{{ libro.titulo }}</td>
+                        <td>
+                            <img src="{{ libro.imagen.url }}" height="100">
+                        </td>
+                        <td>{{ libro.descripcion }}</td>
                         <td>
                             <a name="" id="" class="btn btn-info" href="#" role="button"> Editar </a>
                             <a name="" id="" class="btn btn-danger" href="#" role="button"> Borrar </a>
                         </td>
                     </tr>
+                    {% endfor %}
                     
                 </tbody>
             </table>
