--- a/libreria/templates/libros/index.html
+++ b/libreria/templates/libros/index.html
@@ -39,7 +39,7 @@
                         <td>{{ libro.descripcion }}</td>
                         <td>
                             <a name="" id="" class="btn btn-info" href="{% url 'editar' libro.id %}" role="button"> Editar </a>
-                            <a name="" id="" class="btn btn-danger" href="#" role="button"> Borrar </a>
+                            <a name="" id="" class="btn btn-danger" href="{% url 'eliminar' libro.id %}" role="button"> Borrar </a>
                         </td>
                     </tr>
                     {% endfor %}
